# ReLife_M1_V3

./: CMakeLists.txt  README.md  prj.conf  relife_m1_nrf5340_cpuapp.overlay
child_image/: hci_ipc.conf
include/bma400/: bma400.h
src/: main.c  relife_build_time.h.in  relife_debug.h  relife_protocol.h  shell_commands.c
src/drivers/bma400/: bma400_simple.c  bma400_simple.h
src/drivers/fram/: fram_cy15b108.c  fram_cy15b108.h
src/drivers/max30101/: max30101_simple.c  max30101_simple.h
src/drivers/mlx90632/: mlx90632_extended_meas.c  mlx90632_simple.c  mlx90632_simple.h
src/drivers/power/: board_power.c  board_power.h
src/drivers/rv3028/: rv3028_simple.c  rv3028_simple.h
sysbuild/hci_ipc/: prj.conf
sysbuild/hci_ipc/boards/: relife_m1_nrf5340_cpunet.overlay
